2006-05-31 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.AddIns.Setup/AddinInfo.cs:
	* MonoDevelop.Core.AddIns/AddIn.cs: Implemented support for optional
	  extensions in add-ins.
	  
	* MonoDevelop.Core.AddIns/AddInService.cs: Don't crash if pre-loading
	  of an add-in fails, just report the error. While resolving deps and
	  preloading add-ins, take into account disabled add-ins.
	  
	* MonoDevelop.Core.AddIns.Setup/AddinSystemConfiguration.cs:
	* MonoDevelop.Core.AddIns.Setup/SetupService.cs:
	* MonoDevelop.Core.AddIns.Setup/AddinSetupInfo.cs: Implement support
	  for enabling/disabling add-ins.
	  
	* MonoDevelop.Core.AddIns/DumpAddinInfoApp.cs:
	* MonoDevelop.Core.AddIns/AddInTreeSingleton.cs: Removed unused code.
	
	* MonoDevelop.Core/PropertyService.cs:
	* MonoDevelop.Core.AddIns.Setup/AddinPackage.cs: Fix warning.
	

2006-05-05 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.AddIns/AddInService.cs: Throw an UserException if
	  StartApplication can't find the provided application.
	  Implemented GetApplications().
	* MonoDevelop.Core.AddIns/AssemblyLoader.cs: Use GetAssemblyManifest
	  instead of GetAssembly to get the referenced assemblies, since it
	  is much faster.
	* MonoDevelop.Core.AddIns/CodonBuilder.cs: Use the new ChildCodonsAttribute
	  instead of CategoryAttribute.
	* MonoDevelop.Core.addin.xml: Added some descriptions.
	* MonoDevelop.Core.AddIns.Setup/SetupService.cs: When resolving dependencies,
	  if one of the unresolved dep is MonoDevelop.Core, just report that a
	  new MD version is required. Make ApplicationRecord implement
	  IApplicationInfo.

	* MonoDevelop.Core.mdp:
	* Makefile.am: Added ChildCodonsAttribute.cs.

2006-05-04 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core.addin.xml: Updated versions.
	* MonoDevelop.Core.mdp: Updated.

2006-04-21 Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Core/SystemAssemblyService.cs: Implemented support for
	  2.0 assemblies.