@@ -1,3 +1,8 @@
+2006-06-02 Lluis Sanchez Gual  <lluis@novell.com>
+
+	* MonoDevelop.Core/SystemAssemblyService.cs: Added fast path for
+	  LocateAssembly.
+
 2006-05-31 Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.Core.AddIns.Setup/AddinInfo.cs:
